<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">idles</string>
    <string name="fragment_login_button_login">登录</string>
    <string name="fragment_login_editText_number">请输入账号</string>
    <string name="fragment_login_editText_password">请输入密码</string>
    <string name="fragment_register_editText_password">请输入密码</string>
    <string name="fragment_register_editText_secondPassword">请再次输入密码</string>
    <string name="fragment_login_textView_forget">忘记密码</string>
    <string name="fragment_login_textView_visitor">以游客方式登录</string>
    <string name="fragment_login_textView_register">注册</string>
    <string name="fragment_register_textView_register">注册</string>
    <string name="activity_main_imageButton_goods_contentDescription">闲置物品页面</string>
    <string name="activity_main_imageButton_works_contentDescription">事务求助（例如请求代课）页面</string>
    <string name="activity_main_imageButton_push_contentDescription">弹出发布需求类型选择框，包括发布闲置商品，求组事务或帖子</string>
    <string name="item_works_imageButton_webChat_contentDescription">弹出事务发布人微信好友添加页面</string>
    <string name="item_works_imageButton_qq_contentDescription">弹出事务发布人qq好友添加页面</string>
    <string name="fragment_editText_phone">请输入手机号</string>
    <string name="fragment_register_editText_email">请输入邮箱号码</string>
    <string name="fragment_register_editText_verification">请输入验证码</string>
    <string name="fragment_register_textView_verification">获取验证码</string>
    <string name="fragment_register_textView_verify">验证</string>
    <string name="fragment_register_textView_backLogin">已经拥有账号？</string>
    <string name="fragment_register_editText_verificationType">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="dialog_config_editText_keyType">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="dialog_config_editText_localUrl_type">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.</string>
    <string name="dialog_config_editText_localUrl">本地服务器地址</string>
    <string name="dialog_config_editText_netUrl">网络服务器地址</string>
    <string name="dialog_config_editText_key">授权修改码</string>
    <string name="dialog_config_button_config">设置</string>
    <string name="dialog_config_editText_email">注册发送邮箱地址</string>
    <string name="dialog_config_editText_emailKey">注册发送邮箱地址授权码</string>
    <string name="toolbarWidget_textView_title">首页</string>
    <string name="dialog_push_textView_pushGood">商品</string>
    <string name="dialog_push_textView_pushTask">事务</string>
    <string name="dialog_push_textView_pushPost">帖子</string>
    <string name="fragment_goodsItem_textView_video_description">视频展示</string>
    <string name="fragment_goodsItem_textView_image_description">图片展示</string>
    <string name="fragment_goodsItem_textView_text_description">文字说明</string>
    <string name="fragment_goodsItem_TextView_location">地点：</string>
    <string name="fragment_goodsItem_TextView_prince">价格：</string>
    <string name="fragment_personal_textView_fans">关注者</string>
    <string name="fragment_personal_textView_followers">关注</string>
    <string name="fragment_personal_textView_myCollection">我的收藏</string>
    <string name="fragment_personal_textView_myOrder">我的订单</string>
    <string name="fragment_personal_textView_myPush">我的发布</string>
    <string name="fragment_personal_textView_myData">我的资料</string>
    <string name="fragment_personal_textView_myQRCode">我的二维码</string>
    <string name="toolbar_editText_search_hint">想要点什么？</string>
    <string name="goodsListFragment_textView_nullData">暂时没有商品，敬请期待…</string>
    <string name="fragment_affair_textView_nullData">暂时没有事务，敬请期待…</string>
    <string name="fragment_goodsItem_textView_description">文字描述</string>
    <string name="fragment_goodsItem_textView_image">图片展示</string>
    <string name="fragment_goodsItem_textView_video">视频展示</string>
    <string name="fragment_goodsItem_imageButton_need">我想要</string>
    <string name="item_works_textView_time">处理时间：</string>
    <string name="item_works_textView_location">事务具体地点：</string>
    <string name="item_works_textView_price">价格：</string>
    <string name="item_works_button_receipt">接单</string>
    <string name="item_goods_textView_time">购买时间：</string>
    <string name="item_goods_textView_location">交易地点：</string>
    <string name="item_goods_textView_need"> 人想要</string>
    <string name="dialog_goods_editText_name">商品名称</string>
    <string name="dialog_goods_editText_price">商品价格</string>
    <string name="dialog_goods_editText_time">点击选择商品购买时间</string>
    <string name="dialog_goods_editText_location">具体交易地点</string>
    <string name="dialog_goods_editText_description">商品介绍</string>
    <string name="dialog_goods_button_titleImage">上传标题图片</string>
    <string name="dialog_goods_button_introImage">上传介绍图片</string>
    <string name="dialog_goods_button_video">上传介绍视频</string>
    <string name="dialog_goods_textView_loading"
        tools:ignore="TypographyEllipsis">正在上传，请稍等...</string>
    <string name="dialog_goods_imageButton_push_contentDescription">发布商品</string>
    <string name="dialog_works_editText_name">事务名称</string>
    <string name="dialog_works_editText_prince">价格</string>
    <string name="dialog_works_textView_startTime">起始时间</string>
    <string name="dialog_works_textView_endTime">结束时间</string>
    <string name="dialog_works_editText_location">事务具体地点</string>
    <string name="activity_works_editText_intro">事务说明</string>
    <string name="activity_push_commodity_button_push">发布事务</string>
    <string name="fragment_mine_content_textView">暂无内容</string>
    <string name="fragment_goodsWorks_textView_dividing"> | </string>
    <string name="fragment_goodsWorks_imageButton_goods">只显示货物</string>
    <string name="fragment_goodsWorks_imageButton_works">只显示事务</string>
    <string name="fragment_goodsWorks_textView_empty">暂无内容</string>
    <string name="fragment_myData_textView_title">我的资源</string>
    <string name="fragment_myData_textView_integrity">完整度</string>
    <string name="fragment_myData_textView_basic">基本信息</string>
    <string name="fragment_myData_textView_basic_avatar">头像</string>
    <string name="fragment_myData_textView_basic_nickName">昵称</string>
    <string name="fragment_myData_textView_basic_number">账号</string>
    <string name="fragment_myData_textView_basic_gender">性别</string>
    <string name="fragment_myData_textView_basic_college">院校</string>
    <string name="fragment_myData_textView_basic_location">常住</string>
    <string name="fragment_myData_textView_basic_resume">简介</string>
    <string name="dialog_nick_name_editText_hint">输入一个昵称（不超过10个字）</string>
    <string name="dialog_resume_editText_hint">说点什么？</string>
    <string name="dialog_resume_button">完成</string>
    <string name="dialog_resume_textView">简介</string>
    <string name="fragment_choose_college_textView_title">修改学校信息</string>
    <string name="fragment_choose_college_editText">请输入学校信息</string>
    <string name="dialog_user_data_editText_name_hint">用户名（只允许中文和英文，不超过5个字符）</string>
    <string name="dialog_user_data_editText_number_hint">登录账号（只允许英文和数字，8个字符）</string>
    <string name="dialog_user_data_imageButton_male_contentDescription">姓别选择_男</string>
    <string name="dialog_user_data_imageButton_feMale_contentDescription">姓别选择_女</string>
    <string name="dialog_user_data_button_cancel">暂时不修改资料</string>
    <string name="dialog_user_data_button_ok">确定修改</string>
    <string name="dialog_user_data_imageButton_resume_hint">个人简介</string>
    <string name="dialog_choose_location_button">确定</string>
</resources>
