<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="15dp"
    android:background="@drawable/dialog_config_background">

    <EditText
        android:id="@+id/dialog_config_editText_localUrl"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:digits="@string/dialog_config_editText_localUrl_type"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/dialog_config_editText_localUrl"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/dialog_config_editText_netUrl"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_config_editText_localUrl"
        app:layout_constraintStart_toStartOf="@id/dialog_config_editText_localUrl"
        app:layout_constraintEnd_toEndOf="@id/dialog_config_editText_localUrl"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:digits="@string/dialog_config_editText_localUrl"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/dialog_config_editText_netUrl"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/dialog_config_editText_email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_config_editText_netUrl"
        app:layout_constraintStart_toStartOf="@id/dialog_config_editText_localUrl"
        app:layout_constraintEnd_toEndOf="@id/dialog_config_editText_localUrl"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/dialog_config_editText_email"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/dialog_config_editText_emailKey"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_config_editText_email"
        app:layout_constraintStart_toStartOf="@id/dialog_config_editText_localUrl"
        app:layout_constraintEnd_toEndOf="@id/dialog_config_editText_localUrl"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:digits="@string/dialog_config_editText_key"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/dialog_config_editText_emailKey" />

    <EditText
        android:id="@+id/dialog_config_editText_key"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_config_editText_emailKey"
        app:layout_constraintStart_toStartOf="@id/dialog_config_editText_netUrl"
        app:layout_constraintEnd_toEndOf="@id/dialog_config_editText_netUrl"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:digits="@string/dialog_config_editText_keyType"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/dialog_config_editText_key"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/dialog_config_button_config"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/dialog_config_editText_localUrl"
        app:layout_constraintEnd_toEndOf="@id/dialog_config_editText_localUrl"
        app:layout_constraintTop_toBottomOf="@id/dialog_config_editText_key"
        android:layout_marginTop="25dp"
        android:background="@drawable/fragment_login_button_config"
        android:text="@string/dialog_config_button_config"
        android:textColor="@android:color/darker_gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>