<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="380dp"
    android:layout_height="350dp">

    <EditText
        android:id="@+id/dialog_works_editText_name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="300dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dialog_works_editText_name"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="12sp"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/dialog_works_editText_price"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_works_editText_name"
        app:layout_constraintTop_toTopOf="@id/dialog_works_editText_name"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/dialog_works_editText_prince"
        android:maxLines="1"
        android:inputType="number"
        android:textSize="12sp"
        android:importantForAutofill="no" />


  

    <TextView
        android:id="@+id/dialog_works_textView_startTime"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@id/dialog_works_editText_name"
        app:layout_constraintEnd_toStartOf="@id/dialog_works_textView_time_separator"
        app:layout_constraintTop_toBottomOf="@id/dialog_works_editText_name"
        android:layout_marginBottom="300dp"
        android:hint="@string/dialog_works_textView_startTime"
        app:layout_constraintHorizontal_weight="5"
        android:maxLines="1"
        android:background="@drawable/dialog_works_text"
        android:gravity="center"
        android:textSize="12sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/dialog_works_textView_time_separator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/dialog_works_textView_startTime"
        app:layout_constraintBottom_toBottomOf="@id/dialog_works_textView_startTime"
        app:layout_constraintEnd_toStartOf="@id/dialog_works_textView_endTime"
        app:layout_constraintTop_toTopOf="@id/dialog_works_textView_startTime"
        android:gravity="center"
        app:layout_constraintHorizontal_weight="1"
        android:text="-"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/dialog_works_textView_endTime"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_works_textView_time_separator"
        app:layout_constraintTop_toTopOf="@id/dialog_works_textView_startTime"
        app:layout_constraintHorizontal_weight="5"
        android:layout_marginEnd="20dp"
        android:hint="@string/dialog_works_textView_endTime"
        android:maxLines="1"
        android:background="@drawable/dialog_works_text"
        android:gravity="center"
        android:textSize="12sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/dialog_works_editText_location"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_works_textView_startTime"
        app:layout_constraintStart_toStartOf="@id/dialog_works_editText_name"
        app:layout_constraintEnd_toEndOf="@id/dialog_works_textView_endTime"
        android:hint="@string/dialog_works_editText_location"
        android:textSize="12sp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_works_editText_description"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:hint="@string/dialog_goods_editText_description"
        app:layout_constraintTop_toBottomOf="@id/dialog_works_editText_location"
        app:layout_constraintStart_toStartOf="@id/dialog_works_editText_name"
        app:layout_constraintEnd_toEndOf="@id/dialog_works_editText_price"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:textSize="13sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/dialog_goods_edit"/>

    <Button
        android:id="@+id/dialog_works_button_push"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/activity_push_commodity_button_push"
        app:layout_constraintTop_toBottomOf="@id/dialog_works_editText_description"
        app:layout_constraintStart_toStartOf="@id/dialog_works_editText_name"
        app:layout_constraintEnd_toEndOf="@id/dialog_works_editText_price"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:background="@drawable/dialog_goods_button"/>


    <TextView
        android:id="@+id/dialog_works_textView_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:text="@string/dialog_goods_textView_loading"
        android:textColor="@android:color/black"
        android:visibility="gone"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>